feat: 优化菜谱推荐速度，新增后端直出接口、全局缓存和单菜替换功能